# gyza

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  TESTING.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  integration.yml  release.yml
demo/: bounds_proof_demo.py  injection_demo.py  loop_node.py  single_machine_global.py  single_machine_phase2.py  two_agent_pipeline.py  two_machine_demo.py  two_node_loop.py
docs/: invariants.md  state-machines.md  wire-protocol.md
docs/adr/: 0001-python-go-split-via-grpc.md  0002-ed25519-blake3-cryptographic-primitives.md  0003-384-dim-embeddings-lsh-discovery.md  0004-bilateral-compute-credit-settlement.md  0005-linear-icp-envelope-chains.md  0006-blackboard-coordination-pattern.md  0007-kademlia-dht-gyza-1-0-prefix.md  0008-bwrap-executor-sandboxing.md  0009-tier3-quorum-attestation.md  0010-libp2p-capability-stream.md  0011-python-initiated-bidi-grpc-bridge.md  0012-applicant-proposed-attestation-body.md  0013-verify-on-fetch-cached-verifier.md  0014-recursive-tier3-trusted-bootstrap.md  0015-vnext-architectural-commitment.md  0016-trustless-bounds-proof-soundness.md  0017-runner-attestation-via-binary-hash.md  0018-trusted-release-set-fixed-point.md  README.md
gyza/: __init__.py  _compat.py  adaptor.py  audit.py  blackboard.py  capability_eval.py  cli.py  config.py  demand.py  drift.py  embeddings.py  evidence.py  icp.py  identity.py  memory.py  observability.py  release.py  resilience.py  reward.py  runner.py  schema.py  supervisor.py  trusted_releases.json
gyza-rs/: Cargo.toml  MIGRATION.md
gyza-rs/gyza-blackboard/: Cargo.toml
gyza-rs/gyza-blackboard/src/: lib.rs
gyza-rs/gyza-capability/: Cargo.toml
gyza-rs/gyza-capability/src/: lib.rs
gyza-rs/gyza-core/: Cargo.toml
gyza-rs/gyza-core/src/: lib.rs
gyza-rs/gyza-crypto/: Cargo.toml
gyza-rs/gyza-crypto/src/: lib.rs
gyza-rs/gyza-icp/: Cargo.toml
gyza-rs/gyza-icp/src/: lib.rs
gyza-rs/gyza-identity/: Cargo.toml
gyza-rs/gyza-identity/src/: lib.rs
gyza-rs/gyza-settlement/: Cargo.toml
gyza-rs/gyza-settlement/src/: lib.rs
gyza-rs/scripts/: regenerate_capability_fixtures.py  regenerate_crypto_fixtures.py  regenerate_icp_fixtures.py  regenerate_settlement_fixtures.py
gyza/demo/: README.md  __init__.py  __main__.py  byzantine.py  collective_scale.py  consensus_lab.py  control_plane.py  coordination_plane.py  ddil_partition.py  gossip.py
gyza/economy/: coordinator.py  delegation.py  ledger.py  market.py  reputation.py  resolution.py  settlement.py  subcontract.py  wallet.py
gyza/network/: artifact_client.py  artifact_server.py  artifact_store.py  attestation_adapter.py  capability_protocol.py  cluster.py  daemon_supervisor.py  demo_agent.py  discovery.py  global_cluster.py  netd_client.py  network_blackboard.py  peer_cache.py  peer_registry.py  raft.py  result_delivery.py  transport.py  trust_registry.py
gyza/network/proto/: netd_pb2.py  netd_pb2_grpc.py
gyza/sandbox/: __init__.py  _entrypoint.py  _probes.py  config.py  executor.py  runner.py
netd/: Makefile  go.mod  go.sum
netd/cmd/gyza-netd/: main.go
netd/internal/bootstrap/: bootstrap.go  bootstrap_test.go
netd/internal/capability/: capability.go  capability_test.go  recursive.go  recursive_test.go
netd/internal/capability_stream/: capability_stream.go  capability_stream_test.go
netd/internal/dht/: dht.go  dht_test.go  lsh.go  lsh_test.go  verifier.go  verifier_test.go
netd/internal/discovery/: discovery.go  discovery_test.go
netd/internal/gossip/: gossip.go  gossip_test.go  testhelpers.go
netd/internal/grpc/: server.go  server_test.go
netd/internal/grpc/proto/: netd.pb.go  netd.proto  netd_grpc.pb.go
netd/internal/host/: host.go  host_test.go
netd/internal/identity/: identity.go
netd/internal/message/: message.go  message_test.go
netd/internal/nat/: nat.go  nat_test.go
packaging/: Dockerfile  Dockerfile.build  build-runtime-image.sh  build.sh  check_glibc_floor.sh  gyza.spec  gyza_launcher.py
research/correlated_failure/: .gitignore  FINDINGS.md  FINDINGS_CI_NULL.md  METHODS.md  PREREGISTRATION.md  README.md  ci_null_result.json  codebench.py  conditional_independence_null.py  decisive_result.json  decisive_result_openrouter.json  pilot_result.json  rho_measure.py  run_freeform_pilot.py  run_groq.py  run_openrouter.py  run_pilot.py  run_truthful_pilot.py  test_ci_null.py  test_codebench.py  test_rho_measure.py  test_sharpened.py  test_truthful.py  truthful.py  truthful_result_cached.json
scripts/: cut_release.py  deploy-bootstrap.sh  deploy.env.example  generate_lsh_planes.py  install.sh  verify-bootstrap.sh
spec/: Attestation.cfg  Attestation.tla  Attestation_adversarial.cfg  Attestation_invariants.md  README.md  Reconciliation.cfg  Reconciliation.tla  Reconciliation_adversarial.cfg  Settlement.cfg  Settlement.tla  Settlement_adversarial.cfg  Settlement_invariants.md
tests/: conftest.py  test_adaptor.py  test_artifact_client.py  test_artifact_server.py  test_artifact_store.py  test_attestation_bridge.py  test_audit.py  test_blackboard.py  test_capability_eval.py  test_capability_protocol.py  test_chain_verification.py  test_collective_scale.py  test_consensus_lab.py  test_coordinator.py  test_daemon_supervisor.py  test_ddil_control_plane.py  test_ddil_coordination_plane.py  test_ddil_partition.py  test_delegation.py  test_demand.py  test_discovery.py  test_edge_cases.py  test_embeddings.py  test_enforcement_honesty.py  test_evidence.py  test_free_rider_filter.py  test_frozen_sandbox.py  test_global_cluster.py  test_hlc_ratchet.py  test_icp.py  test_icp_cross_machine.py  test_identity.py  test_ledger.py  test_market.py  test_memory.py  test_netd_client.py  test_network_blackboard.py  test_network_blackboard_gossip.py  test_observability.py  test_peer_cache.py  (+21 more)
