[package]
name = "gyza-core"
description = "Core protocol types for Gyza — WorkItem, Artifact, HLC. Pure data + thread-safe hybrid logical clock. Ports gyza/schema.py."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
