[package]
name = "gyza-settlement"
description = "Bilateral compute-credit settlement for Gyza. Ports the entry-level signing/verification surface of gyza/economy/ledger.py + the state machine from spec/Settlement.tla."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
gyza-crypto = { path = "../gyza-crypto" }
gyza-identity = { path = "../gyza-identity" }
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
thiserror.workspace = true

[dev-dependencies]
hex-literal.workspace = true
